--- a/Mappers/Scripts/VS2022/Mappers.vcxproj.filters
+++ b/Mappers/Scripts/VS2022/Mappers.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="..\..\Mappers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\MMC1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\MMC1_Based.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\NROM.cpp">
@@ -57,6 +63,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\CartridgeFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\MMC1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\MMC1_Based.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
