--- a/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj.filters
+++ b/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="..\..\SignalDefs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\RegDump.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\FamicomBoard.h">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\BreaksCore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\RegDump.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
