--- a/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj
+++ b/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj
@@ -41,6 +41,7 @@
     </ClCompile>
     <ClCompile Include="..\..\PPUPlayerBoard.cpp" />
     <ClCompile Include="..\..\PPUPlayerBoardDebug.cpp" />
+    <ClCompile Include="..\..\RegDump.cpp" />
     <ClCompile Include="..\..\SignalDefs.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +58,7 @@
     <ClInclude Include="..\..\NESBoard.h" />
     <ClInclude Include="..\..\pch.h" />
     <ClInclude Include="..\..\PPUPlayerBoard.h" />
+    <ClInclude Include="..\..\RegDump.h" />
     <ClInclude Include="..\..\SignalDefs.h" />
   </ItemGroup>
   <ItemGroup>
