--- a/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj.filters
+++ b/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj.filters
@@ -69,7 +69,7 @@
     <ClCompile Include="..\..\SignalDefs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\RegDump.cpp">
+    <ClCompile Include="..\..\RegDumpEmitter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -116,7 +116,7 @@
     <ClInclude Include="..\..\BreaksCore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\RegDump.h">
+    <ClInclude Include="..\..\RegDumpEmitter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
