--- a/Breaknes/BreaksCore/Scripts/VS2022/BreaksCoreStatic.vcxproj.filters
+++ b/Breaknes/BreaksCore/Scripts/VS2022/BreaksCoreStatic.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="..\..\SignalDefs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\RegDumpEmitter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\FamicomBoard.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\BreaksCore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\RegDumpEmitter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
