--- a/Breaknes/BreaksCore/Scripts/VS2022/BreaksCoreStatic.vcxproj
+++ b/Breaknes/BreaksCore/Scripts/VS2022/BreaksCoreStatic.vcxproj
@@ -40,6 +40,7 @@
     </ClCompile>
     <ClCompile Include="..\..\PPUPlayerBoard.cpp" />
     <ClCompile Include="..\..\PPUPlayerBoardDebug.cpp" />
+    <ClCompile Include="..\..\RegDumpEmitter.cpp" />
     <ClCompile Include="..\..\SignalDefs.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -56,6 +57,7 @@
     <ClInclude Include="..\..\NESBoard.h" />
     <ClInclude Include="..\..\pch.h" />
     <ClInclude Include="..\..\PPUPlayerBoard.h" />
+    <ClInclude Include="..\..\RegDumpEmitter.h" />
     <ClInclude Include="..\..\SignalDefs.h" />
   </ItemGroup>
   <ItemGroup>
