--- a/IO/Scripts/VS2022/IO.vcxproj
+++ b/IO/Scripts/VS2022/IO.vcxproj
@@ -38,6 +38,10 @@
     <ClInclude Include="..\..\NESController.h" />
     <ClInclude Include="..\..\pch.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Readme.md" />
+    <None Include="..\..\ReadmeRus.md" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
