--- a/IO/Scripts/VS2022/IO.vcxproj.filters
+++ b/IO/Scripts/VS2022/IO.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\..\NESController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\UM6582.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\NESController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\UM6582.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
