--- a/IO/Scripts/VS2022/IO.vcxproj.filters
+++ b/IO/Scripts/VS2022/IO.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\..\UM6582.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\CD4021.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\UM6582.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\CD4021.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
